Replace address with github link

--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
             </div>
         </div>
         <div class="grid-item grid-item-left" id="grid-item-contact">
-            <p class="content-title underline">CONTACTS</p>
+            <p class="content-title underline">CONTACT</p>
             <p class="content-element underline"><i class="fa-solid fa-mobile-screen"></i> +40 723 254 030</p>
             <p class="content-element underline"><i class="fa-solid fa-envelope"></i>
                 stefan-tudor.popescu<br>@student.unitbv.ro</p>
-            <p class="content-element underline"><i class="fa-solid fa-house"></i> Brasov, Romania</p>
+            <p class="content-element underline"><i class="fa-brands fa-github"></i>
+                <a href="https://github.com/PopescuStefan1">PopescuStefan1</a></p>
         </div>
-        <div class="grid-item grid-item-right" id="grid-item-profile">Profile</div>
+        <div class="grid-item grid-item-right" id="grid-item-profile">
+            <div class="content-title underline">DESPRE MINE</div>
+            <div class="content-element">asdf</div>
+        </div>
         <div class="grid-item grid-item-left" id="grid-item-skills">
             <p class="content-title underline">SKILLS</p>
             <div class="content-element underline skill-element">
@@ -72,7 +76,7 @@
         </div>
         <div class="grid-item grid-item-right" id="grid-item-experience">Experience</div>
         <div class="grid-item grid-item-left" id="grid-item-education">
-            <div class="content-title underline">EDUCATION</div>
+            <div class="content-title underline">EDUCATIE</div>
             <div class="content-element underline education-content">
                 <p>Universitatea Transilvania din Brasov</p>
                 <p class="degree">TI - Inginerie Electrica si Stiinta Calculatoarelor</p>
