Write about and experience rows

--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
             <p class="content-element underline"><i class="fa-solid fa-envelope"></i>
                 stefan-tudor.popescu<br>@student.unitbv.ro</p>
             <p class="content-element underline"><i class="fa-brands fa-github"></i>
-                <a href="https://github.com/PopescuStefan1">PopescuStefan1</a></p>
+                <a href="https://github.com/PopescuStefan1">PopescuStefan1</a>
+            </p>
         </div>
         <div class="grid-item grid-item-right" id="grid-item-profile">
             <div class="content-title underline">DESPRE MINE</div>
-            <div class="content-element">asdf</div>
+            <div class="content-element about">Sunt student la profilul Tehnologia Informatiei, in cadrul caruia am
+                studiat multe aspecte diverse ale programarii si ingineriei. De asemenea am studiat pe cont propriu, cel
+                mai recent cursul The Odin Project, care se axeaza pe HTML, CSS si Javascript. De asemenea, in cadrul
+                acestui curs am invatat cum sa folosesc o masina virtuala care ruleaza sistemul de operare Linux,
+                terminalul Linux, git si github si multe alte tehnologii standard ale industriei. Recent, am inceput
+                sectiunea Ruby on Rails al acestui curs. Multe din proiectele la care am lucrat pot fi gasite pe pagina
+                mea de github.</div>
         </div>
         <div class="grid-item grid-item-left" id="grid-item-skills">
             <p class="content-title underline">SKILLS</p>
@@ -74,15 +81,34 @@
                 </div>
             </div>
         </div>
-        <div class="grid-item grid-item-right" id="grid-item-experience">Experience</div>
+        <div class="grid-item grid-item-right" id="grid-item-experience">
+            <div class="content-title underline">EXPERIENTA</div>
+            <div class="content-element eduxperience-content">
+                <p>IBM</p>
+                <p class="degree">Practica Linux</p>
+                <p>2022</p>
+                <p class="about">Am facut practica la compania IBM in al doilea an universitar timp de o luna. Am
+                    invatat si aplicat
+                    concepte din Linux printre care: instalarea si utilizarea unei masini virtuale, utilizarea
+                    sistemului de operare Linux, utilizarea terminalului pentru a eficientiza lucrul cu fisiere si a
+                    efectua comenzi specifice, scrierea si rularea scripturilor BASH.</p>
+            </div>
+            <div class="content-element eduxperience-content">
+                <p>Companie</p>
+                <p class="degree">Titlu</p>
+                <p>2023 - 2023</p>
+                <p class="about">Lorem ipsum dolor sit amet, consectetur adipscing elit duis feugiat id felis tinicidunt
+                    volutpat etiam laoreet vitae enim in viverra.</p>
+            </div>
+        </div>
         <div class="grid-item grid-item-left" id="grid-item-education">
             <div class="content-title underline">EDUCATIE</div>
-            <div class="content-element underline education-content">
+            <div class="content-element underline eduxperience-content">
                 <p>Universitatea Transilvania din Brasov</p>
                 <p class="degree">TI - Inginerie Electrica si Stiinta Calculatoarelor</p>
                 <p>2020 - prezent</p>
             </div>
-            <div class="content-element underline education-content">
+            <div class="content-element underline eduxperience-content">
                 <p>Colegiul National de Stiinte "Grigore Antipa"</p>
                 <p class="degree">Profil Mate-Info</p>
                 <p>2016 - 2020</p>
