--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
                 <p class="degree">Titlu</p>
                 <p>2023 - 2023</p>
                 <p class="about">Lorem ipsum dolor sit amet, consectetur adipscing elit duis feugiat id felis tinicidunt
-                    volutpat etiam laoreet vitae enim in viverra.</p>
+                    volutpat etiam laoreet vitae enim in viverra aliquam non nisl justo mauris dolor eros congue sit
+                    amet ex in cursus posuere justo ut quis nunc eleifend dapibus tellus et efficitur eros nunc arcu
+                    orci sodales ac felis.</p>
             </div>
         </div>
         <div class="grid-item grid-item-left" id="grid-item-education">
